# Fiddleless

./: Cargo.toml
scripts/: champions.json  lib.py  runescraper.py  vars.py
scripts/data/: Aatrox.json  Ahri.json  Akali.json  Akshan.json  Alistar.json  Anivia.json  Annie.json  Aphelios.json  Ashe.json  Aurelionsol.json  Azir.json  Bard.json  Belveth.json  Blitzcrank.json  Brand.json  Braum.json  Caitlyn.json  Camille.json  Cassiopeia.json  Chogath.json  Corki.json  Darius.json  Diana.json  Draven.json  Drmundo.json  Ekko.json  Elise.json  Evelynn.json  Ezreal.json  Fiddlesticks.json  Fiora.json  Fizz.json  Galio.json  Gangplank.json  Garen.json  Gnar.json  Gragas.json  Graves.json  Gwen.json  Hecarim.json  (+123 more)
src/: main.rs  old.rs
src/auth/: token.rs
src/requests/: mod.rs  runes.rs  state.rs
src/utils/: champions.rs  mod.rs  windows.rs
